--- a/local.yml
+++ b/local.yml
@@ -15,12 +15,14 @@ services:
       context: .
       dockerfile: ./backend/dockerfile/local/Dockerfile
     working_dir: /app
+    image: djangoblog_local_backend_img
     container_name: djangoblog_local_backend
     restart: always
-    # depends_on:
-    #   - postgres
+    depends_on:
+      - postgres
     env_file:
       - ./.envs/local/django
+      - ./.envs/local/postgres
     volumes:
       - ./backend:/app
     ports:
@@ -32,8 +34,8 @@ services:
       context: ./frontend # ビルドのコンテキスト（Dockerfileのベースとなるディレクトリ
       dockerfile: ./dockerfile/local/Dockerfile   # 使用するDockerfileのパス ビルドでやることはこのDockerfileに記載
     working_dir: /app  # コンテナを起動した後の、コンテナ内での作業ディレクトリ commandやentrypointはこのディレクトリを基準とする
-    image: djangoblog_local_frontend  # ビルド後のイメージ名
-    container_name: local_frontend  # 起動するコンテナの名前（任意）
+    image: djangoblog_local_frontend_img  # ビルド後のイメージ名
+    container_name: djangoblog_local_frontend  # 起動するコンテナの名前（任意）
     volumes:
       - ./frontend:/app  # ホストの ./frontend をコンテナの /app にマウント（コード変更が即反映される）
       - node_modules:/app/node_modules  # node_modules はボリュームで分離（ホストと衝突を避ける）ただしこのディレクトリはroot所有者になる。
