- フロントエンドからバックエンドへgetリクエストできるよう、CORS設定 - blog一覧とblog詳細用画面を仮作成 - frontendでのimport時に@でルートパスがつかえるようにする - postgresのヘルスチェック確認後にバックエンドを起動(このためにpostgres用dockerfile作成) - frontendとbackendをcomposeで起動する時にuid=1000ユーザーでログインするようにする - frontendのdockerfileについて、npm install後にnode_modulesのchownを1000:1000に変更

--- a/backend/dockerfile/local/Dockerfile
+++ b/backend/dockerfile/local/Dockerfile
@@ -1,15 +1,4 @@
 FROM python:3.12.9-slim
-
-# # Rust & Cargoのインストール(drf-spectacularをインストールするのに)に必要なパッケージ
-# RUN apt-get update && apt-get install -y \
-#     curl \
-#     build-essential \
-#     libpq-dev \
-#     && rm -rf /var/lib/apt/lists/*
-
-# # Rust（+cargo）をインストール
-# RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
-# ENV PATH="/root/.cargo/bin:$PATH"
 WORKDIR /app
 COPY ./backend/requirements/local.txt /app/requirements/local.txt
 RUN pip install -r /app/requirements/local.txt
@@ -22,12 +11,16 @@ RUN pip install -r /app/requirements/local.txt
 # 3. docker-compose -f local.yml run --rm backend django-admin startproject config . を実行して、プロジェクトを作成する
 # 4. down --rmi all -v後に、build backendまたはup --build backend実行後、http://localhost:8000にアクセスして、最初のdjangoプロジェクトが画面がでることを確認する。
 #--------
+# ===OLD情報====
 # ただし、3で生成されたファイル・ディレクトリは全部root所有になっていて、vscodeで編集できなくなっているので、
 # ローカルでsudo chown -R $USER:$USER ./backendと、sudo chmod -R 777 ./backend を実行するか、
 # コンテナ内で、chown -R 1000:1000 /appと、chmod -R 777 /appを実行しておきましょう。
 # なお、migrationファイルの作成も、コンテナ内で実行 or docker-compose -f local.yml run --rm backend python3 makemigrationsで生成するはずですが、その後上記を実行しないと、生成したマイグレーションファイルを編集できなくなります。
 #--------
 # 上の注意部分を納得してもらってから、以降は、docker-compose up --build backendなどとして起動させてバックエンドの開発をすればok
+# 【OLD情報に対する追記】user: "${UID:-1000}:${GID:-1000}"をdocker-compose.ymlに書き込んでいるので、docker-composeコマンドを使う時はuid=1000でログインする。
+# その状態で生成されるファイルは1000:1000の所有者・所有グループとなる。なので問題ない。
+# =============
 
 #--1 フロントからバックに通信できるようになるまで、バックエンド側--
 # 1 アプリの作成(→ではapiというディレクトリができる)  docker-compose -f local.yml run --rm backend python manage.py startapp api
@@ -35,8 +28,8 @@ RUN pip install -r /app/requirements/local.txt
 # 2 modelsを作成してモデル(blogs.py)を作成 参考は https://qiita.com/okoppe8/items/a1149b2be54441951de1#%E6%96%87%E5%AD%97%E5%88%97textfield
 # 3 シリアライザ(rest_framewor.serializers.ModelSerializerを継承したクラス)、ビュー（検証段階ならrest_framewor.viewsets.ReadOnlyModelViewSetを継承したクラス）を作成し、urls.pyにビューのpathをrouter.registerする
 # 4 psycopg[binary]をpip install される状態にしないとエラーになる。https://github.com/psycopg/psycopg
-# 5 settings.pyのDATABASESの設定をdocker-composeからの環境変数をつかうようにすること。またINSATLLED_APPSにもapiを登録する必要がでる。
-# 5 docker-compose -f local.yml run --rm backend python manage.py makemigrations でマイグレーションファイルを作成 (権限変更が必要なのは一緒)
-# 6 docker-compose -f local.yml run --rm backend python manage.py migrate
-# 7 docker-compose -f local.yml run --rm backend python manage.py createsuperuser
+# 5 settings.pyのDATABASESの設定をdocker-composeからの環境変数をつかうようにすること。またINSTALLED_APPSにもapiを登録する必要がでる。
+# 5 docker compose -f local.yml run --rm backend python manage.py makemigrations でマイグレーションファイルを作成 (権限変更が必要なのは一緒)
+# 6 docker compose -f local.yml run --rm backend python manage.py migrate
+# 7 docker compose -f local.yml run --rm backend python manage.py createsuperuser --noinput
 # 8 あとはlistとretrieveなルーティングを実現する
