--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
+    "preline": "^3.0.1",
     "tailwindcss": "^4.0.14",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
