--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.0.14",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^26.0.0",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
     "preline": "^3.0.1",
     "tailwindcss": "^4.0.14",
     "vee-validate": "^4.15.0",
+    "vitest": "^3.1.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "yup": "^1.6.1"
