- フロントエンドのテストを追加(mocked)し、動作を確認(ブログ一覧画面のみだが) - 今までe2eと言っていたテストはmockedテストと言うことにした。(e2eテストについては別PRにて) - フロントエンドのdata-testidを変更

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,1 +1,7 @@
-# このpytest.iniはテストを実行したら自動生成されるだけ。
+# pytest.ini
+# バックエンドのテストコマンド docker-compose -f local.yml run --rm backend bash -c "pytest -s"
+# を実行するとき、この内容でdjangoが起動し、テスト対象ファイルを指定する
+[pytest]
+addopts = --ds=config.settings_fortest --reuse-db
+# addopts = --ds=config.settings_fortest --create-db
+python_files = tests.py test_*.py
