--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,6 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,node,redis,django
 
 .envs
+# playwrightのvideoとtraceデータの保存先
+playwright-real/e2e_tests/result
+playwright-mock/mocked_tests/result
