--- a/e2e.yml
+++ b/e2e.yml
@@ -39,7 +39,8 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000 --noreload
+    # command: python manage.py runserver_plus 0.0.0.0:8000
 
   frontend:
     build:
