- .gitignoreに、トレースデータ作成ディレクトリ指定せず実行した際のデフォルトディレクトリを追加 - e2eテスト実行に不要な設定を見直し - 既存のmockedテストを修正 - localのfrontendに.envsの環境変数を読み込み

--- a/.gitignore
+++ b/.gitignore
@@ -410,4 +410,6 @@ pyrightconfig.json
 .envs
 # playwrightのvideoとtraceデータの保存先
 playwright-real/e2e_tests/result
+playwright-real/e2e_tests/test-results
 playwright-mock/mocked_tests/result
+playwright-mock/mocked_tests/test-results
