--- a/local.yml
+++ b/local.yml
@@ -49,6 +49,8 @@ services:
     working_dir: /app  # コンテナを起動した後の、コンテナ内での作業ディレクトリ commandやentrypointはこのディレクトリを基準とする
     image: djangoblog_local_frontend_img  # ビルド後のイメージ名
     container_name: djangoblog_local_frontend  # 起動するコンテナの名前（任意）
+    env_file:
+      - ./.envs/local/frontend
     volumes:
       - ./frontend:/app  # ホストの ./frontend をコンテナの /app にマウント（コード変更が即反映される）
       - node_modules:/app/node_modules  # node_modules はボリュームで分離（ホストと衝突を避ける）ただしこのディレクトリはroot所有者になる。
