--- a/e2e.yml
+++ b/e2e.yml
@@ -19,6 +19,9 @@ services:
       retries: 5
 
   backend:
+    # この環境でのテストe2eのみ。pytest-djangoを使わず、djangoblogデータベースをそのままテストに使う
+    # そのため、テスト前に準備するデータがもしあられば、コマンドで実行する必要がでる。
+    # 詳しくはscripts/e2eにて
     build:
       context: .
       dockerfile: ./backend/dockerfile/local/Dockerfile
@@ -33,15 +36,12 @@ services:
     env_file:
       - ./.envs/e2e/django
       - ./.envs/e2e/postgres
-    environment:
-      - DJANGO_SETTINGS_MODULE=config.settings_fortest  # ← 本番ではないテスト専用設定
     volumes:
       - ./backend:/app
+      - ./scripts/e2e:/app/scripts  # ← e2e用のスクリプトをマウント
     ports:
       - "8000:8000"
-    command: python manage.py runserver 0.0.0.0:8000 --noreload
-    # command: python manage.py runserver_plus 0.0.0.0:8000
-
+    command: python manage.py runserver 0.0.0.0:8000
   frontend:
     build:
       context: ./frontend
@@ -72,14 +72,6 @@ services:
     working_dir: /app
     volumes:
       - ./playwright-real/e2e_tests:/app/e2e_tests
-      - ./backend:/app/backend
-    env_file:
-      - ./.envs/e2e/django
-      - ./.envs/e2e/postgres  # ← これが抜けていたのが原因
-    environment:
-      - DJANGO_SETTINGS_MODULE=config.settings_fortest
-      - DJANGO_ALLOW_ASYNC_UNSAFE=1
-      - PYTHONPATH=/app/backend  # ← backend 配下のモジュールをインポート可能に
     user: "${UID:-1000}:${GID:-1000}"
     # entrypoint: [ "tail", "-f", "/dev/null" ]  # ← デバッグ時に便利
 
