--- a/.github/workflows/ci-githubactions.yml
+++ b/.github/workflows/ci-githubactions.yml
@@ -21,7 +21,20 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
-
+      
+      - name: Create Django .env file
+        run: |
+          mkdir -p .envs/local
+          echo "DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}" > .envs/local/django
+          echo "DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}" > .envs/local/django
+          echo "DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" > .envs/local/django
+          echo "VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}" >> .envs/local/frontend
+          echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" >> .envs/local/postgres
+          echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .envs/local/postgres
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .envs/local/postgres
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .envs/local/postgres
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .envs/local/postgres
+          
       - name: Build and start containers
         run: |
           docker compose -f local.yml up -d
@@ -37,3 +50,4 @@ jobs:
 
 # 「developmentブランチにpull_request提出 -> テスト実施 -> テストが全部通ったならばPRをマージ可能な状態になる」
 # には、githubリポジトリページ -> Settings -> Branchesで「branch protection rules」に「Add branch rule set」そのルールを設定する必要がある。
+# 特にそのルールの中で「Require status checks to pass before merging」にチェックを入れ、このymlのワークフローnameを選択する必要がある。
