--- a/local.yml
+++ b/local.yml
@@ -15,7 +15,8 @@ services:
     # user: "${UID:-1000}:${GID:-1000}" #<- postgresにはこれはかけない
     healthcheck:
       #ヘルスチェック(postgresが正常に動作しているかどうか)は以下のスクリプトを実行して行う
-      test: ["CMD", "/usr/local/bin/check-db.sh"]
+      # test: ["CMD", "/usr/local/bin/check-db.sh"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
