postgresコンテナのヘルスチェックを再度実施。これに伴い、ワークフローの実行順番を変更

--- a/local.yml
+++ b/local.yml
@@ -13,13 +13,14 @@ services:
     ports:
       - "5432:5432"
     # user: "${UID:-1000}:${GID:-1000}" #<- postgresにはこれはかけない
-    # healthcheck:
-    #   #ヘルスチェック(postgresが正常に動作しているかどうか)は以下のスクリプトを実行して行う
-    #   # test: ["CMD", "/usr/local/bin/check-db.sh"]
-    #   test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 10
+    healthcheck:
+      #ヘルスチェック(postgresが正常に動作しているかどうか)は以下のスクリプトを実行して行う
+      # test: ["CMD", "/usr/local/bin/check-db.sh"]
+      # スクリプトファイルではなく、直接コマンドを実行。ダブルドルにしておくのは、composeファイル内でのエスケープのため
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
   backend:
     build:
       context: .
@@ -29,11 +30,11 @@ services:
     container_name: djangoblog_local_backend
     restart: always
     user: "${UID:-1000}:${GID:-1000}"
-    depends_on:
-      - postgres
     # depends_on:
-    #   postgres:
-    #     condition: service_healthy
+    #   - postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
     env_file:
       - ./.envs/local/django
       - ./.envs/local/postgres
