ワークフロー内での環境変数の使い方を変更

--- a/.github/workflows/ci-githubactions.yml
+++ b/.github/workflows/ci-githubactions.yml
@@ -22,19 +22,24 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
-      
       - name: Create .envs files
         run: |
           mkdir -p .envs/local
-          echo "DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}" > .envs/local/django
-          echo "DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}" >> .envs/local/django
-          echo "DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" >> .envs/local/django
-          echo "VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}" > .envs/local/frontend
-          echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" > .envs/local/postgres
-          echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .envs/local/postgres
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .envs/local/postgres
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .envs/local/postgres
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .envs/local/postgres
+          echo "${{ secrets.DJANGO_ENV_FILE }}" > .envs/local/django
+          echo "${{ secrets.POSTGRES_ENV_FILE }}" > .envs/local/postgres
+          echo "${{ secrets.FRONTEND_ENV_FILE }}" > .envs/local/frontend
+      # - name: Create .envs files
+      #   run: |
+      #     mkdir -p .envs/local
+      #     echo "DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}" > .envs/local/django
+      #     echo "DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}" >> .envs/local/django
+      #     echo "DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" >> .envs/local/django
+      #     echo "VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}" > .envs/local/frontend
+      #     echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" > .envs/local/postgres
+      #     echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .envs/local/postgres
+      #     echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .envs/local/postgres
+      #     echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .envs/local/postgres
+      #     echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .envs/local/postgres
       # - name: .envs files cat
       #   run: |
       #     echo ".envs/local/django"
