実験的に、テストが通らない状態にして挙動を確認する。

--- a/.github/workflows/ci-githubactions.yml
+++ b/.github/workflows/ci-githubactions.yml
@@ -38,9 +38,12 @@ jobs:
         run: |
           docker compose -f local.yml run --rm backend python manage.py migrate
       
+      # - name: Run backend unit tests
+      #   run: |
+      #     docker compose -f local.yml run --rm backend pytest api/tests
       - name: Run backend unit tests
         run: |
-          docker compose -f local.yml run --rm backend pytest api/tests
+          docker compose -f local.yml run --rm backend pytest aaaaapi/tests
       
       - name: Frontend unit tests (Vitest)
         run: docker compose -f local.yml run --rm frontend npx vitest run tests
