実験成功につき、テストが通る状態に戻す

--- a/.github/workflows/ci-githubactions.yml
+++ b/.github/workflows/ci-githubactions.yml
@@ -38,12 +38,9 @@ jobs:
         run: |
           docker compose -f local.yml run --rm backend python manage.py migrate
       
-      # - name: Run backend unit tests
-      #   run: |
-      #     docker compose -f local.yml run --rm backend pytest api/tests
       - name: Run backend unit tests
         run: |
-          docker compose -f local.yml run --rm backend pytest aaaaapi/tests
+          docker compose -f local.yml run --rm backend pytest api/tests
       
       - name: Frontend unit tests (Vitest)
         run: docker compose -f local.yml run --rm frontend npx vitest run tests
