--- a/.github/workflows/manually-e2e-githubactions.yml
+++ b/.github/workflows/manually-e2e-githubactions.yml
@@ -8,7 +8,7 @@ on:
       branch:
         description: '実行ブランチを選択（作業ブランチではなく development や main）'
         type: choice
-        options: [development, main,e2etest-running-by-manually-githubactions]
+        options: [development, stage, prod_sub, main]
         default: development
 
 jobs:
