--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
