--- a/development.yml
+++ b/development.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./frontend:/app  # ホストの ./frontend をコンテナの /app にマウント（コード変更が即反映される）
+      # - ./frontend:/app  # ホストの ./frontend をコンテナの /app にマウント（コード変更が即反映される）<- いらない。vite開発サーバーはdevelopmentでは使わないから
       - ./front_nginx:/front_nginx
       - node_modules:/app/node_modules  # node_modules はボリュームで分離（ホストと衝突を避ける）ただしこのディレクトリはroot所有者になる。
 volumes:
