--- a/frontend/dockerfile/development/Dockerfile
+++ b/frontend/dockerfile/development/Dockerfile
@@ -4,6 +4,11 @@ FROM node:22.14.0-bullseye-slim AS builder
 # Docker イメージをビルドする時の、コンテナ内作業ディレクトリを /app に設定
 # このディレクトリを基準にして、この後のRUNやCOPYが実行される。
 WORKDIR /app
+# build-time ARG の定義
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+# ENV VITE_API_BASE_URL=abc
+
 # npmパッケージのインストール開始
 COPY frontend/package*.json ./
 RUN npm install
