--- a/development.yml
+++ b/development.yml
@@ -1,20 +1,37 @@
 services:
-  # マルチステージビルドなフロントエンドコンテナ (最終的に動くのはnginxだが、node.jsでviteをビルドしてから、nginxで配信する)
-  front_nginx:
+  frontend:
+    #このfrontendサービスは npm run buildのためだけのサービス
+    # docker compose -f development.yml run --rm frontend コマンドでビルド
+    # ↓
+    # frontend/distにビルド済みデータが作成される
     build:
-      context: .  # このサービスについてはビルド時はfrontendを基準ディレクトリにするのではなく、このymlファイルがある場所になります。
-      dockerfile: ./frontend/dockerfile/development/Dockerfile
+      context: ./frontend
+      dockerfile: ./dockerfile/development/Dockerfile
       args:
-        # VITE_API_BASE_URL: ${VITE_API_BASE_URL}
+        # npm run build時に使う環境変数 = バックエンドへのfetch先
+        # ここに記述するので、.envs/development/frontendからはVITE_API_BASE_URLは削除する
         VITE_API_BASE_URL: http://localhost:8000
+    env_file:
+      - ./.envs/development/frontend
+    working_dir: /app
+    command: npm run build
+    volumes:
+      - ./frontend:/app
+      - node_modules:/app/node_modules
+    user: "${UID:-1000}:${GID:-1000}"
+    container_name: djangoblog_development_buildonly_frontend
+    profiles:
+      - buildonly  # docker composeコマンドで起動時は --profile=buildonlyをいれた時にだけ起動 = 単にupするとこのコンテナは起動しない
+  # front_nginx & backend_gunicorn & postgresサービスは、↑でfrontendのビルドができてから、docker compose -f development.yml upで起動する。
+  front_nginx:  
+    image: nginx:latest
+    container_name: djangoblog_development_front_nginx
     ports:
       - "8080:80"
     volumes:
-      # - ./frontend:/app  # ホストの ./frontend をコンテナの /app にマウント（コード変更が即反映される）<- いらない。vite開発サーバーはdevelopmentでは使わないから
-      - ./front_nginx:/front_nginx
-      - node_modules:/app/node_modules  # node_modules はボリュームで分離（ホストと衝突を避ける）ただしこのディレクトリはroot所有者になる。
-    env_file:
-      - ./.envs/development/frontend
+      - ./frontend/dist:/usr/share/nginx/html:ro
+      - ./front_nginx/nginx_confs/development/nginx.conf:/etc/nginx/nginx.conf
+    restart: always
   playwright-mock:
     build:
       context: .
@@ -37,8 +54,6 @@ services:
     container_name: djangoblog_development_backend_gunicorn
     restart: always
     user: "${UID:-1000}:${GID:-1000}"
-    # depends_on:
-    #   - postgres
     depends_on:
       postgres:
         condition: service_healthy
@@ -78,9 +93,9 @@ services:
 volumes:
   db_data:
   node_modules:  # Vueプロジェクトの依存ファイルを保持するボリューム
-  # frontend_build:  # フロントエンドのビルド結果を格納するボリューム
 
 #-------
 #このdocker-compose.ymlを使う場合、フロントエンドのビルドのためのコマンドと、配信のためのコマンドを叩く必要がある。
-# ビルド : docker-compose -f development.yml run --rm frontend-builder
-# 配信   : docker-compose -f development.yml up nginx
+# ビルド : docker compose -f development.yml run --rm frontend
+# 配信   : docker compose -f development.yml up
+# バックエンドのマイグレーション & スーパーユーザー作成 & 初期データ作成 : sh scripts/development/setup-scripts.sh
