--- a/development.yml
+++ b/development.yml
@@ -67,7 +67,7 @@ services:
       # - ./pytest.ini:/app/pytest.ini
     ports:
       - "8000:8000"
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
   postgres:
     build:
       context: ./postgres
