--- a/local.yml
+++ b/local.yml
@@ -76,6 +76,8 @@ services:
       - frontend
     working_dir: /app
     user: "${UID:-1000}:${GID:-1000}"
+    env_file:
+      - ./.envs/local/frontend
     volumes:
       - ./playwright-mock:/app  # ← テストケースファイルはこの中のe2e_testsディレクトリだが、test_resultsもここに作成される
     # entrypoint: [ "tail", "-f", "/dev/null" ]  # デバッグ用。任意で変更可。
