local.yml環境でtraefik導入。現在はhttp://localhost/でフロントエンド、http://localhost/api/v1/でバックエンドにアクセス。http://localhost/adminでdjango管理画面

--- a/local.yml
+++ b/local.yml
@@ -1,4 +1,21 @@
 services:
+  traefik:
+    image: traefik:latest
+    container_name: traefik
+    restart: always
+    ports:
+      - "80:80"
+    networks:
+      - traefik-network
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik/traefik.yml:/etc/traefik/traefik.yml:ro
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=PathPrefix(`/traefik`)"
+      - "traefik.http.routers.traefik.entrypoints=web"
+      - "traefik.http.routers.traefik.service=api@internal"
+
   postgres:
     build:
       context: ./postgres
@@ -12,6 +29,8 @@ services:
       - db_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - traefik-network
     # user: "${UID:-1000}:${GID:-1000}" #<- postgresにはこれはかけない
     healthcheck:
       #ヘルスチェック(postgresが正常に動作しているかどうか)は以下のスクリプトを実行して行う
@@ -42,9 +61,17 @@ services:
       - ./backend:/app
       # 以下はバックエンドディレクトリの外にあるpytestファイルを、コンテナのapp内に置かないとテストができないのでマウント
       # - ./pytest.ini:/app/pytest.ini
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
+    networks:
+      - traefik-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=PathPrefix(`/api`) || PathPrefix(`/admin`) || PathPrefix(`/static`) || PathPrefix(`/accounts`)"
+      - "traefik.http.routers.backend.entrypoints=web"
+      - "traefik.http.services.backend.loadbalancer.server.port=8000"
+
   frontend:
     build: # docker-compose buildまたは、docker-compose up --buildを使ったときの、Dockerfileを使ってイメージをビルドする設定
       # https://qiita.com/Mayumi_Pythonista/items/f69f7a1e8b0bbeab9560
@@ -60,9 +87,17 @@ services:
       - node_modules:/app/node_modules  # node_modules はボリュームで分離（ホストと衝突を避ける）ただしこのディレクトリはroot所有者になる。
     user: "${UID:-1000}:${GID:-1000}" # docker-composeコマンドでの操作はこのuid,gidで実施する(default値はともに1000) このdocker-compose.yml内でファイルを生成するときに重要
     restart: always  # コンテナが落ちたときに自動で再起動
-    ports:
-      - "5173:5173"  # ホストの5173番ポートをコンテナの5173番ポートに接続（Viteの開発サーバ用）
-    command: npm run dev --host # コンテナ起動時にVite開発サーバを起動
+    # ports:
+    #   - "5173:5173"  # ホストの5173番ポートをコンテナの5173番ポートに接続（Viteの開発サーバ用）
+    command: npm run dev -- --host 0.0.0.0 --port 5173 # コンテナ起動時にVite開発サーバを起動
+    networks:
+      - traefik-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=PathPrefix(`/`) && !PathPrefix(`/api`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.services.frontend.loadbalancer.server.port=5173"
+
   playwright-mock:
     build:
       context: .
@@ -99,3 +134,6 @@ services:
 volumes:
   db_data:
   node_modules:  # Vueプロジェクトの依存ファイルを保持するボリューム
+networks:
+  traefik-network:
+    name: traefik-network
