--- a/local.yml
+++ b/local.yml
@@ -91,7 +91,7 @@ services:
   #     - backend
   #     - frontend
   #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+  #     - ./nginx/local/nginx.conf:/etc/nginx/nginx.conf
   #     # - ./nginx/cert.pem:/etc/nginx/cert.pem
   #     # - ./nginx/key.pem:/etc/nginx/key.pem
   #   ports:
