.gitignoreを訂正 !/backendが間違っているし、backend/static/defaultの内容物だけ再帰的に対象にした

--- a/.gitignore
+++ b/.gitignore
@@ -416,8 +416,8 @@ playwright-mock/mocked_tests/test-results
 
 # backend/static/default = python manage.py collectstatic --no-inputの実行結果の静的ファイルがあつまるディレクトリ
 # collectstatic実行後は大量の静的ファイルがそのディレクトリにできてしまうが、それはリポジトリに上がってほしくないので.gitignoreにいれる
-backend/static/default/*
+backend/static/default/**
 # collectstatic実行前は空ディレクトリだが、ディレクトリ自体は空っぽのままでgitに上げたいので
 #.gitkeepをdefaultに作成し、その.gitkeepは.gitignoreされないように!にします。
-!/backend/static/default/.gitkeep  # defaultディレクトリは保持してもよい
+!backend/static/default/.gitkeep
 # backend/staticディレクトリには.gitkeepを作成する必要はないです。 = defaultディレクトリがあるから空っぽじゃないから。
