--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -3,8 +3,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      docker: 20
+    # runtime-versions:
+    #   docker: 20
     commands:
       - echo "[Install] Installing dependencies"
       - yum install -y jq git
