デバッグ用の記述を追加

--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -55,8 +55,9 @@ phases:
       - echo "[PostBuild] Preparing artifacts for deployment"
       - mkdir -p output
       - cp aws_deploy/appspec.yml output/
-        
       - cp -r aws_deploy/scripts output/
+      - echo "[PostBuild] Listing output directory"
+      - find output
 artifacts:
   files:
     - output/**/*
