--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -54,8 +54,10 @@ phases:
     commands:
       - echo "[PostBuild] Preparing artifacts for deployment"
       - mkdir -p output
-      - cp aws_deploy/appspec.yml output/
-      - cp -r aws_deploy/scripts output/
+      # - cp aws_deploy/appspec.yml output/
+      # - cp -r aws_deploy/scripts output/
+      #全ディレクトリをCodeDeployにわたすように修正
+      - cp -r * output/
       - echo "[PostBuild] Listing output directory"
       - find output
 artifacts:
